# incentive-societies-bef9

./: README.md  REPORT.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml
datasets/raw/: calibration.json  test.json  validation.json
logs/: research_prompt.txt  session_instructions.txt
notebooks/: 2025-11-07-15-31_IncentiveCompatibleSocieties.ipynb
results/: config.json
results/evaluations/: statistical_analysis.json  summary_metrics.csv
results/model_outputs/: experiment_results.json  full_experiment_results.json
